--- a/src/TrailerScopeBlazorWasm/Client/_Imports.razor
+++ b/src/TrailerScopeBlazorWasm/Client/_Imports.razor
@@ -13,6 +13,8 @@
 
 @using MudBlazor
 
+@using TrailerScopeBlazorWasm.Client.Services
+
 
 @using TrailerScope.RazorLib
 @using TrailerScope.RazorLib.Shared
@@ -20,3 +22,4 @@
 @using TrailerScope.RazorLib.Components
 
 
+@using Microsoft.Extensions.Logging
