--- a/src/TrailerScope.RazorLib/Pages/MovieSearch.razor
+++ b/src/TrailerScope.RazorLib/Pages/MovieSearch.razor
@@ -3,16 +3,18 @@
 @using System.ComponentModel.DataAnnotations
 @using TrailerScope.Contracts.Services
 @using TrailerScope.Domain.Entities
+@inject ISnackbar Snackbar
+
 
 <h3>Search movies</h3>
 
 
 <div style="max-width: 600px;">
-	<EditForm Model="@model" OnValidSubmit="OnValidSubmit">
-		<DataAnnotationsValidator />
+	<EditForm Model="@model" OnValidSubmit="OnValidSubmit" OnInvalidSubmit="InvalidSubmit">
+		<DataAnnotationsValidator/>
 		<MudCard>
 			<MudCardContent>
-				<MudTextField T="string" Label="Movie title" Required="true" @bind-Value="model.SearchText" RequiredError="Movie title is required!" />
+				<MudTextField T="string" Label="Movie title" Required="true" @bind-Value="model.SearchText" RequiredError="Movie title is required!"/>
 			</MudCardContent>
 			<MudCardActions>
 				<MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto">Search</MudButton>
@@ -24,7 +26,7 @@
 	</EditForm>
 
 </div>
-<br />
+<br/>
 
 @if (HaveMovies)
 {
@@ -46,49 +48,63 @@
 @code {
 
 	//[Inject] IMovieInfoService _searchService { get; set; }
-	[Inject] IMovieInfoService _searchService { get; set; }
-	[Inject] ILogger<MovieSearch> logger { get; set; }
+	[Inject]
+	IMovieInfoService _searchService { get; set; }
+
+	[Inject]
+	ILogger<MovieSearch> logger { get; set; }
 
 	//[Required,MinLength(1)] internal string SearchText { get; set; }
 	internal SearchQuery model = new();
 
-	bool formIsValid;
-	string[] errors = { };
-	MudForm form;
+	//MudForm form;
 	IEnumerable<MovieInfo> movies;
 	bool HaveMovies => movies != null && movies!.Any();
 
+	private void InvalidSubmit(EditContext context)
+	{
+		Snackbar.Add($"Invalid submit trigered", Severity.Info);
+	}
+
+
 	private async Task OnValidSubmit(EditContext context)
 	{
+		// note : this is workaround when invalid submit trigers validsubmit
+		if(!context.Validate() || string.IsNullOrWhiteSpace(model.SearchText)) return;
+
 		await SearchMovies(model.SearchText);
-		//success = true;
+	//success = true;
 		StateHasChanged();
 	}
 
-	internal async Task SearchMovies(string title)
+	private async Task SearchMovies(string title)
 	{
 		logger.LogInformation("got search request for title: {SearchText}", title);
-		//if (!form.IsValid) return;
 
 		var result = await _searchService.SearchByTitleAsync(title);
 
-		logger.LogInformation("got response : {IsSuccess}", result.IsSuccess, result.Value);
+		logger.LogInformation("got response : {result.IsSuccess}", result.IsSuccess);
 
-		if (result.IsFailed)
+		if (result.IsSuccess && result.Value.Any())
 		{
-			formIsValid = false;
-			errors = result.Errors.Select(x => x.Message).ToArray();
-			logger.LogInformation("got reasons: {Reasons}", result.Reasons);
-
+			movies = result.Value;
 			return;
 		}
 
-		movies = result.Value;
+		if (result.IsFailed)
+		{
+			logger.LogInformation("got reasons: {Reasons}", result.Reasons.First());
+			Snackbar.Add($"Fail: Reason: {result.Reasons.First()}", Severity.Error);
+		}
+
+	// handle success with not found data
+		Snackbar.Add($"Nothing found", Severity.Warning);
 	}
 
 	internal class SearchQuery
 	{
-		[Required, MinLength(1)] internal string SearchText { get; set; }
+		[Required, MinLength(1)]
+		internal string SearchText { get; set; }
 	}
 
 }
