Wip : creating litedb caching service and stuff

--- a/src/TrailerScope.RazorLib/Pages/MovieSearch.razor
+++ b/src/TrailerScope.RazorLib/Pages/MovieSearch.razor
@@ -49,7 +49,7 @@
 
 	//[Inject] IMovieInfoService _searchService { get; set; }
 	[Inject]
-	IMovieInfoService _searchService { get; set; }
+	IMovieSearchService _searchService { get; set; }
 
 	[Inject]
 	ILogger<MovieSearch> logger { get; set; }
