--- a/src/TrailerScope.RazorLib/Shared/MyNavMenu.razor
+++ b/src/TrailerScope.RazorLib/Shared/MyNavMenu.razor
@@ -1,9 +1,9 @@
 <MudNavMenu>
-	<MudNavLink Href="/hello">Hi</MudNavLink>
-	<MudNavLink Href="/movie/search">Search</MudNavLink>
+	@*<MudNavLink Href="/hello">Hi</MudNavLink>*@
 	<MudNavGroup Title="Movies" Expanded="true">
-		<MudNavLink Href="/movie/list">List</MudNavLink>
-		<MudNavLink Href="/movie/archive">Archive</MudNavLink>
+		<MudNavLink Href="/movies/search">Search</MudNavLink>
+		<MudNavLink Href="/movies/search_history">Search history</MudNavLink>
+		@*<MudNavLink Href="/movies/archive">Archive</MudNavLink>*@
 	</MudNavGroup>
 	<MudNavLink Href="/about">About</MudNavLink>
 </MudNavMenu>
