--- a/src/TrailerScopeBlazorWasm/Client/_Imports.razor
+++ b/src/TrailerScopeBlazorWasm/Client/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@using System.Net.Http
+@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -20,6 +20,7 @@
 @using TrailerScope.RazorLib.Shared
 @using TrailerScope.RazorLib.Pages
 @using TrailerScope.RazorLib.Components
+@using TrailerScope.RazorLib.Services
 
 
 @using Microsoft.Extensions.Logging
