--- a/src/TrailerScope.RazorLib/Pages/Movies/MovieSearch.razor
+++ b/src/TrailerScope.RazorLib/Pages/Movies/MovieSearch.razor
@@ -1,8 +1,6 @@
 @page "/movies/search"
 
-
-<h3>Search movies</h3>
-
+<h3><MudIcon Icon="@Icons.Material.Outlined.Search" Title="Search" />Search movies by title</h3>
 
 <div style="max-width: 600px;">
 	<EditForm Model="@model" OnValidSubmit="OnValidSubmit" OnInvalidSubmit="InvalidSubmit">
