--- a/src/TrailerScope.RazorLib/Shared/MyNavMenu.razor
+++ b/src/TrailerScope.RazorLib/Shared/MyNavMenu.razor
@@ -1,5 +1,5 @@
 <MudNavMenu>
-	@*<MudNavLink Href="/hello">Hi</MudNavLink>*@
+	<MudNavLink Href="/">Home</MudNavLink>
 	<MudNavGroup Title="Movies" Expanded="true">
 		<MudNavLink Href="/movies/search">Search</MudNavLink>
 		<MudNavLink Href="/movies/search_history">Search history</MudNavLink>
