--- a/src/TrailerScope.RazorLib/Pages/Movies/MovieSearch.razor
+++ b/src/TrailerScope.RazorLib/Pages/Movies/MovieSearch.razor
@@ -4,10 +4,10 @@
 
 <div style="max-width: 600px;">
 	<EditForm Model="@model" OnValidSubmit="OnValidSubmit" OnInvalidSubmit="InvalidSubmit">
-		<DataAnnotationsValidator/>
+		<DataAnnotationsValidator />
 		<MudCard>
 			<MudCardContent>
-				<MudTextField T="string" Label="Movie title" Required="true" @bind-Value="model.SearchText" RequiredError="Movie title is required!"/>
+				<MudTextField T="string" Label="Movie title" Required="true" @bind-Value="model.SearchText" RequiredError="Movie title is required!" />
 			</MudCardContent>
 			<MudCardActions>
 				<MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto">Search</MudButton>
@@ -19,28 +19,41 @@
 	</EditForm>
 
 </div>
-<br/>
+<br />
 
 @if (HaveMovies)
 {
 	<div>
-		<h3>Result movies</h3>
+		<h3>Found movies</h3>
 
 		<ul>
-
 			@foreach (MovieInfo movieInfo in movies)
 			{
-				
-				@*<li>@movieInfo.Title (@movieInfo.ReleaseYear) - @movieInfo.Description</li>*@
+				<li>
+					<a href="/movies/info/@movieInfo.IMDbId">
+						@movieInfo.Title (@movieInfo.ReleaseYear) - @movieInfo.Description
+					</a>
+				</li>
 			}
-
 		</ul>
 	</div>
 }
 
 
 @code {
- 
+	private void InvalidSubmit(EditContext context)
+	{
+		Snackbar.Add($"Invalid submit trigered", Severity.Info);
+	}
 
+	private async Task OnValidSubmit(EditContext context)
+	{
+		// note : this is workaround when invalid submit trigers validsubmit
+		if (!context.Validate() || string.IsNullOrWhiteSpace(model.SearchText)) return;
+
+		await SearchMovies(model.SearchText);
+		//success = true;
+		StateHasChanged();
+	}
 
 }
