--- a/src/TrailerScope.RazorLib/Shared/MyMainLayout.razor
+++ b/src/TrailerScope.RazorLib/Shared/MyMainLayout.razor
@@ -7,7 +7,7 @@
 <MudLayout>
  <MudAppBar>
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
-        My Application
+        Trailer scope
           <MudSpacer />
                 <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
                 <MudButton OnClick="@((e) => ChangeTheme())">Toggle theme (@themeName)</MudButton>
